tests/cel/chainsaw/check-wc-cp-ip/cluster-blocked-ip.yaml
apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
kind: VSphereCluster
metadata:
  name: cluster-blocked-ip
  namespace: default
spec:
  controlPlaneEndpoint:
    host: 10.0.0.40
    port: 6443
