tests/cel/chainsaw/check-wc-cp-ip/cluster-excluded-by-annotation.yaml
apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
kind: VSphereCluster
metadata:
  name: excluded-by-annotation
  namespace: default
  annotations:
    policies.kyverno.io/check-wc-cp-ip: exclude
spec:
  controlPlaneEndpoint:
    host: 203.0.113.10
    port: 6443
