tests/cel/chainsaw/check-wc-cp-ip/cluster-excluded-by-annotation-assert.yaml
apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
kind: VSphereCluster
metadata:
  name: excluded-by-annotation
  namespace: default
spec:
  controlPlaneEndpoint:
    host: 203.0.113.10
    port: 6443
